--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "*.css", "use": "@vercel/static" },
-    { "src": "*.js", "use": "@vercel/static" },
-    { "src": "server.js", "use": "@vercel/node" },
-    { "src": "api/**/*.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/", "dest": "/index.html" },
-    { "src": "/privacy", "dest": "/privacy.html" },
-    { "src": "/terms", "dest": "/terms.html" },
-    { "src": "/(.*)", "dest": "/$1" }
-  ],
-  "env": {
-    "VERCEL": "1"
-  },
   "functions": {
     "api/**/*.js": {
       "maxDuration": 60
@@ -24,5 +7,15 @@
     "server.js": {
       "maxDuration": 60
     }
+  },
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/server.js" },
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/privacy", "dest": "/privacy.html" },
+    { "src": "/terms", "dest": "/terms.html" },
+    { "src": "/(.*)", "dest": "/$1" }
+  ],
+  "env": {
+    "VERCEL": "1"
   }
 }
