--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "version": 2,
   "routes": [
+    { "src": "/api/convert", "methods": ["POST"], "dest": "/server.js" },
+    { "src": "/api/check-result", "methods": ["GET"], "dest": "/server.js" },
     { "src": "/api/(.*)", "dest": "/server.js" },
     { "src": "/", "dest": "/index.html" },
     { "src": "/privacy", "dest": "/privacy.html" },
