--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "doll-generator",
+  "name": "ai-doll-generator",
   "version": "1.0.0",
-  "description": "AI-driven doll/figurine image generator",
-  "main": "index.html",
+  "description": "AI Doll Generator - Transform photos into action figures",
+  "main": "server.js",
   "scripts": {
-    "dev": "vercel dev",
-    "deploy": "vercel --prod"
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "multer": "^1.4.5-lts.2"
-  },
-  "devDependencies": {
-    "vercel": "^28.0.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
