--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ PORT=3000
 # Vercel 环境标识
 # 在 Vercel 上部署时，将此值设置为 1
 VERCEL=0
+
+THIRD_PARTY_API_KEY=sk-yVVdlteKXP88o2gsVFQogw81LVFcpWdVBc5IXoFqyEjdLFEL
