--- a/package.json
+++ b/package.json
@@ -12,5 +12,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jennifer202566/ai-doll.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jennifer202566/ai-doll/issues"
+  },
+  "homepage": "https://github.com/Jennifer202566/ai-doll#readme"
 }
