--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "AI Doll Generator - Transform photos into action figures",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "tsc",
+    "dev": "ts-node server.ts"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jennifer202566/ai-doll.git"
