--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,11 @@
   "version": 2,
   "env": {
     "VERCEL": "1"
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron-process-tasks",
+      "schedule": "* * * * *"
+    }
+  ]
 }
