--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "AI Doll Generator - Transform photos into action figures",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "tsc",
-    "dev": "ts-node server.ts"
+    "start": "node server.js"
   },
   "dependencies": {
     "@upstash/redis": "^1.35.0",
@@ -15,14 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "replicate": "^1.0.1"
   },
   "repository": {
     "type": "git",
