--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,12 @@
   "version": 2,
   "env": {
     "VERCEL": "1"
-  }
+  },
+  "builds": [
+    { "src": "server.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "server.js" },
+    { "src": "/(.*)", "dest": "server.js" }
+  ]
 }
