--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "formidable": "^2.1.2",
     "multer": "^1.4.5-lts.1",
     "replicate": "^1.0.1"
   },
